CHANGELOG for Close Combat Free.

Quite a lot of basic engine stuff was done before this changelog was created. Some more history can be devised from git sources (although even there, the thing is not complete).

=== === === ===
01.12.2011:
 - add CcfConfigSaver
 - add CcfMain (just initial, copy implementation.
   This is likely to be reshaed later)
 - add status message handling

30.11.2011:
 - add sliding BottomMenu (pretty crude implementation, but works)
 - add soldier menu
 - add single soldiers within a unit
 - unified infobox viewer
 - made menus automatically unroll on init, if in desktop mode
 - add OptionsMenu - a roll-down from Options in TopMenu,
   where user will be able to choose from: Preferences, Save game,
   Load game, Quit
 - add quit capability
 - changed QMap<QString, QString> into QMap<QString, QPair<QString, bool> >
   in Config classes - this will enable for the future ConfigSaver class
   to be optimised, as it will only update lines that have changed

29.11.2011:
 - add stop to context menu entry
 - make context menu grid based
 - add zoom in and zoom out keyboard binding ('=' and '-' respectively)
 - parametrised SimpleInfoBox
 - add TopMenu (with new ZoomBox, MenuEntry, PopUpArrow elements)
 - add "Follow" to context menu
 - double click on gameArea now stops following

28.11.2011:
 - add SimpleInfoBox to gui - useful for displaying short messages
 - add pause info box
 - add centering view on a unit (when double clicking on roster entry)
 - add unit follow status box
 - add unit following
 - fix order cancelling
 - make OrderMarkers remain visible even when unit is deselected

27.11.2011:
 - context menu now openes on mouse hold in mobile mode
 - double click in roster now opens context menu
 - add config file, it's parser and root context object.
   Adjust QML to use the new config system
 - add default config file as fallback when there are problems in the main
   one
 - add QML scene resizing together with window