@@ -6,8 +6,7 @@ Rectangle {
     property int entryHeight: 54
 
     id: root
-    height: (unit0.height * 4) + (units.spacing * 6)
-    width: 600
+    width: units.width
     color: "#7e8c24"
     border.color: "#1e1c00"
     border.width: 2
@@ -16,23 +15,20 @@ Rectangle {
         RosterHelper.unitsList = tmpUnitsList;
         for (var i = 0; i < RosterHelper.unitsList.length; i++) {
             var currentUnit = RosterHelper.unitsList[i];
-            units.children[i].entryText = currentUnit.unitType;
-            units.children[i].entryLogo = currentUnit.unitLogo;
-            units.children[i].changeStatus(currentUnit.unitStatus);
-            currentUnit.unitStatusChanged.connect(units.children[i].changeStatus);
-            currentUnit.selectionChanged.connect(units.children[i].selectionChanged);
+            unitModel.append({"unitType": currentUnit.unitType,
+                                 "unitLogo": currentUnit.unitLogo,
+                                 "unitStatus": currentUnit.unitStatus,
+                                 "unitSelected": currentUnit.selected});
+            currentUnit.unitStatusChanged.connect(changeStatus);
+            currentUnit.selectionChanged.connect(selectionChanged);
         }
     }
 
     function getUnitAt(x, y) {
-        var i = -1;
-        var child = units.childAt(x, y);
+        var i = units.indexAt(x, y);
 
-        if ((child != null)) {
-            i = child.index;
-        } else {
-            return -1;
-        }
+        if (i == -1)
+            return i;
 
         if (RosterHelper.unitsList.length <= i)
             return -1;
@@ -44,78 +40,47 @@ Rectangle {
         return units.childAt(x, y);
     }
 
-    Grid {
+    function changeStatus(newStatus, index) {
+        unitModel.set(index, {"unitStatus": newStatus});
+    }
+
+    function selectionChanged(state, index) {
+        unitModel.set(index, {"unitSelected": state});
+    }
+
+    ListModel {
+        id: unitModel
+    }
+
+    Component {
+        id: unitDelegate
+
+        RosterMenuEntry {
+            width: entryWidth
+            height: entryHeight
+
+            entryText: unitType
+            entryLogo: unitLogo
+            entryStatusText: unitStatus
+            selected: unitSelected
+        }
+    }
+
+    GridView {
         id: units
-        anchors.fill: parent
         anchors.topMargin: 2
         anchors.leftMargin: 2
-        spacing: 2
-        rows: 4
-        columns: 4
+
+        anchors.top: parent.top
+        anchors.left: parent.left
+        height: parent.height
+        width: (count > 8)? (entryWidth * 3) : (entryWidth * 2)
+        cellWidth: entryWidth
+        cellHeight: entryHeight
         flow: Grid.TopToBottom
 
-        RosterMenuEntry {
-            id: unit0
-            index: 0
+        model: unitModel
 
-            width: entryWidth
-            height: entryHeight
-        }
-        RosterMenuEntry {
-            id: unit1
-            index: 1
-
-            width: entryWidth
-            height: entryHeight
-        }
-        RosterMenuEntry {
-            id: unit2
-            index: 2
-
-            width: entryWidth
-            height: entryHeight
-        }
-        RosterMenuEntry {
-            id: unit3
-            index: 3
-
-            width: entryWidth
-            height: entryHeight
-        }
-        RosterMenuEntry {
-            id: unit4
-            index: 4
-
-            width: entryWidth
-            height: entryHeight
-        }
-        RosterMenuEntry {
-            id: unit5
-            index: 5
-
-            width: entryWidth
-            height: entryHeight
-        }
-        RosterMenuEntry {
-            id: unit6
-            index: 6
-
-            width: entryWidth
-            height: entryHeight
-        }
-        RosterMenuEntry {
-            id: unit7
-            index: 7
-
-            width: entryWidth
-            height: entryHeight
-        }
-        RosterMenuEntry {
-            id: unit8
-            index: 8
-
-            width: entryWidth
-            height: entryHeight
-        }
+        delegate: unitDelegate
     }
 }
